nao sei se vai funcionar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <p>Jorge Freitas</p>
 <p>João Assunção</p>
 <p>Tiago esteve aqui</p>
+<p>Inês Almeida</p>
 <p>joao correia</p>
 <p>Regina Ferreira</p>
 <p>Paulo</p>
